# NiftyOptionsIntelligence

./: .env.example  .gitignore  .replit  =7.4.0  AUDIT_REPORT.md  BOT_DEBUG_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  LICENSE  ML_BOT_USER_GUIDE.md  NFO.csv  README.md  SINGLE_TRADE_SYSTEM.md  Self-learning_ui.py  TRADING_ISSUES_FIXED.md  TRADING_SYSTEM_AUDIT.md  angel_utils.py  angelone_master_contract_app.py  app.py  app.py.save  auto_fix_streamlit_bot.sh  auto_planner.py  autocode_checker.py  breakout_strategy_v2.py  ce_pe_trigger_bot.py  check_env.py  check_pages_syntax.py  claude.py  codex_changes.diff  codex_fix_log.txt  codex_pr_push.sh  config.py  convert_env_to_secrets.py  create a Python module to detect Nifty trend using delta > 0.6, OI buildup, and LTP  daily_runner.py  dashboard.py  dashboard_ce_pe_launcher.py  deployment_config.py  environment.yml  error_proof_angel_app.py  evolution_viewer.py  (+65 more)
.smol-dev-js/: config.json
.streamlit/: config.toml
attached_assets/: Pasted--CE-BUY-Call-Option-Buying-You-expect-the-market-to-go-up-bullish-view-Ideal-Strike--1751989530530_1751989530533.txt  Pasted--package-import-statement-from-SmartApi-import-SmartConnect-or-from-SmartApi-smartConnect-import--1751965823220_1751965823221.txt  Pasted-Historical-API-Historical-API-provides-past-data-of-the-indices-and-instruments-When-a-successful--1751960852797_1751960852797.txt  Pasted-Instruments-Request-Type-Endpoint-Description-GET-https-margincalculator-angelone-in-OpenAPI-Fil-1751960937770_1751960937771.txt  (+5 more)
broker/: angel.py
config/: .json  _init_.py  settings.py
(+117 files in other folders)
