[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyotp>=2.9.0",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
    "websocket-client>=1.8.0",
]
