[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "keras>=2.14.0",
    "lightgbm>=4.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyotp>=2.9.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
    "tensorflow>=2.14.0",
    "websocket-client>=1.8.0",
    "xgboost>=3.0.2",
]
